# bevy_cursor_hovering_sprite

./: Cargo.toml  LICENSE.txt  README.md
cursor_hovering_sprite/: Cargo.toml
cursor_hovering_sprite/src/: README.md
example/: Cargo.toml  README.md
example/assets/: circle.aseprite
example/src/: main.rs
src/: lib.rs
