[package]
name = "bevy_cursor_hovering_sprite"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/xavierwoo/bevy_cursor_hovering_sprite"
keywords = ["Sprite picking", "Sprite hovering", "bevy"]
categories = ["game-development"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0"}

[profile.dev.package."*"]
opt-level = 3