[package]
name = "bevy_cursor_hovering_sprite"
version = "0.1.0"
edition = "2021"
author = "xavier.woo@gmail.com"
description = "a very lightweight plugin for bevy engine to check if a cursor is hovering on one 2d sprite"
repository = "https://github.com/xavierwoo/bevy_cursor_hovering_sprite"
keywords = ["Sprite picking", "Sprite hovering", "bevy"]
categories = ["game-development"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0"}

[profile.dev.package."*"]
opt-level = 3