[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0"}#, features = ["dynamic_linking"] }

bevy_cursor_hovering_sprite = {path = "../cursor_hovering_sprite"}

[profile.dev.package."*"]
opt-level = 3